Upload design plan + heading test

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
     <head>
-        <title>
-            Alexandra O'Keeffe
-        </title>
+        <title>Alexandra O'Keeffe</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="/IMG_0489.png">
     </head>
 
     <body>
