added profile picture, starting to implement paragraph backgrounds

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <head>
         <title>Alexandra O'Keeffe</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/IMG_0489.png">
+        <link rel="stylesheet" href="mainstyle.css">
     </head>
 
     <body>
-        Alexandra O'Keeffe
+        <div class="pfp_wrap" width="300px" style="overflow: hidden">
+            <img src="20240312_211600_2.jpg" alt="profile" class="pfp" height="250px" style="border-radius: 50%">
+            <p>Alexandra O'Keeffe</p>
+        </div>
+        <div class="summary"></div>
+        <div></div>
     </body>
 </html>
