polishing, fixed colors, font and minimal style implementation

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     </head>
 
     <body>
+        <div class="container">
         <div class="pfp_wrap" width="300px" style="overflow: hidden">
             <img src="20240312_211600_2.jpg" alt="profile" class="pfp" height="250px" style="border-radius: 50%">
-            <p>Alexandra O'Keeffe</p>
+            <p style="text-align:center">Alexandra O'Keeffe</p>
         </div>
         <div class="summary"></div>
-        <div></div>
+        </div>
     </body>
 </html>
