grid setup + init button placement

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
             <img src="20240312_211600_2.jpg" alt="profile" class="pfp" height="250px" style="border-radius: 50%">
             <p style="text-align:center">Alexandra O'Keeffe</p>
         </div>
-        <div class="summary"></div>
+        <div class="summary">
+            <p>button 1</p>
+            <p>button 2</p>
+            <p>button 3</p>
+            <p>button 4</p>
+        </div>
         </div>
     </body>
 </html>
