added pages for new tabs (unlinked)

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     </head>
 
     <body>
+        <div class="banner">
+            <h1>My Website</h1>
+        </div>
+
         <div class="container">
         <div class="pfp_wrap" width="300px" style="overflow: hidden">
             <img src="20240312_211600_2.jpg" alt="profile" class="pfp" height="250px" style="border-radius: 50%">
             <p style="text-align:center">Alexandra O'Keeffe</p>
         </div>
-        <div class="summary">
-            <p>button 1</p>
-            <p>button 2</p>
-            <p>button 3</p>
+        <div class="buttons">
+            <p>About me</p>
+            <p>Projects</p>
+            <p>Hobbies</p>
             <p>button 4</p>
         </div>
         </div>
