new tab + set up links to tabs (with css)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <p style="text-align:center">Alexandra O'Keeffe</p>
         </div>
         <div class="buttons">
-            <p>About me</p>
-            <p>Projects</p>
-            <p>Hobbies</p>
-            <p>button 4</p>
+            <a href="bio.html">About me</a>
+            <a href="professionalhistory.html">Professional History</a>
+            <a href="projects.html">Projects</a>
+            <a href="hobbies.html">Hobbies</a>
         </div>
         </div>
     </body>
