--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="banner">
-            <h1>My Website</h1>
+            <h1>Projects</h1>
         </div>
 
     </body>
