added basic site navigation (menu bar, js)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <title>Alexandra O'Keeffe</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/IMG_0489.png">
         <link rel="stylesheet" href="mainstyle.css">
+        <script src="myscripts.js"></script> 
     </head>
 
     <body>
+
+    <div id="main">
         <div class="banner">
             <h1>My Website</h1>
         </div>
@@ -23,5 +26,6 @@
             <a href="hobbies.html">Hobbies</a>
         </div>
         </div>
+    </div>
     </body>
 </html>
