--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,25 @@
         <title>Alexandra O'Keeffe</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/IMG_0489.png">
         <link rel="stylesheet" href="mainstyle.css">
+        <script src="myscripts.js"></script> 
     </head>
 
     <body>
-        <div class="banner">
-            <h1>Projects</h1>
+        <div id="menu_bar" class="menu">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="index.html">Home</a>
+            <a href="bio.html">About me</a>
+            <a href="professionalhistory.html">Professional History</a>
+            <a href="projects.html">Projects</a>
+            <a href="hobbies.html">Hobbies</a>
         </div>
 
+    <div class="main">
+        <div class="banner">
+            <div class="menu_icon" onclick="openNav()">
+                <div></div><div></div><div></div></div>
+            <h1>Projects</h1>
+        </div>
+    </div>
     </body>
 </html>
